--- a/Firmas_Planos.ipynb
+++ b/Firmas_Planos.ipynb
@@ -16,25 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JLusZxhJ9hBf",
-        "outputId": "2fd7cb51-527c-44e2-af01-a4f8ad478da6"
+        "id": "JLusZxhJ9hBf"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: PyMuPDF in /usr/local/lib/python3.9/dist-packages (1.21.1)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "#@title Cargar librerías y Planos (PDF)\n",
         "!pip install PyMuPDF\n",
         "import fitz\n",
         "import os\n",
@@ -46,6 +34,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Confirmar Coordenadas\n",
         "y_dict = {0: 225, 1: 165, 2: 105, 3: 45, 4: -15, 5: -75} #Aquí puedes adaptar la coordenada según el cajetín del proyecto por cada revisión {rev: coordenada y}\n",
         "x1, x2, x3 = 4130, 4230, 4350 #Aquí puedes adaptar la coordenada según el cajetín del proyecto."
       ],
@@ -58,6 +47,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Ejecutar Script\n",
         "#Coorer script para colocación de firmas, los PDFs firmados aparecerán en la carpeta \"Firmados\"\n",
         "if not os.path.exists('/content/Firmados'):\n",
         "    os.makedirs('/content/Firmados')\n",
